# pytaiga-mcp

./: .dockerignore  .env.docker  .env.example  .flake8  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  logging.yaml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml
.github/: ABOUT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: docs.yml  quality.yml  tests.yml
community/contributing/: index.html
community/security/: index.html
developer_guide/: index.html
developer_guide/api/: index.html
developer_guide/architecture/: index.html
developer_guide/auth_module/: index.html
developer_guide/mcp_sdk_reference/: index.html
developer_guide/taiga_client/: index.html
developer_guide/taiga_rest_api_reference/: index.html
developer_guide/user_story_best_practices/: index.html
docs/: README.md  SECURITY.md  index.md  structure.md
docs/developer_guide/: README.md  architecture.md  auth_module.md  taiga_client.md  taiga_rest_api_reference.md  user_story_best_practices.md
docs/developer_guide/api/: index.md
docs/user_guide/: README.md  authentication.md  client_connection.md  getting_started.md  installation.md  quickstart.md  quickstart_simple.md  token_authentication.md  transport.md
examples/: README.md  secure_authentication.py  simple_token_auth.py
pytaiga_mcp/: __main__.py  auth_cache.py  auth_setup.py  cli.py  github_auth.py  logging_config.py  main.py  server.py  taiga_client.py
pytaiga_mcp/helpers/: __init__.py  story_builder.py
pytaiga_mcp/server/: __init__.py  __main__.py  auth.py  common.py  epics.py  issues.py  metrics.py  milestones.py  projects.py  rate_limiter.py  tasks.py  token_storage.py  user_stories.py  wiki.py
scripts/: docker.sh  inspect.sh  install.sh  quality.sh  run.sh
search/: search_index.json
structure/: index.html
tests/: README.md  conftest.py  test_integration.py  test_server.py
user_guide/: index.html
user_guide/authentication/: index.html
user_guide/client_connection/: index.html
user_guide/getting_started/: index.html
user_guide/installation/: index.html
user_guide/quickstart/: index.html
user_guide/quickstart_simple/: index.html
user_guide/token_authentication/: index.html
user_guide/transport/: index.html
